# lego-art-map-generator

./: .gitignore  LICENSE  Makefile  README.md  count_tiles.py  pyproject.toml  world-map-color-map.txt
.github/workflows/: build.yml  poetry-outdated.yml
data/: booklet_max_tile_counts.csv  greece_map_brightness_tile_proportion.csv  greece_map_max_tile_counts.csv  madagascar_map_brightness_tile_proportion.csv  new_guinea_map_brightness_tile_proportion.csv  new_guinea_map_max_tile_counts.csv  new_zealand_map_brightness_tile_proportion.csv  north_sea_map_brightness_tile_proportion.csv  scotland_mainland_map_brightness_tile_proportion.csv  scotland_map_brightness_tile_proportion.csv  world_map_brightness_tile_proportion.csv  world_map_brightness_tile_proportion_2.csv  world_map_distribution.csv  world_map_max_tile_counts.csv  world_map_tile_count.csv
data/lego_world_map_ascii/: column-1.asc  column-2.asc  column-4.asc  column-6.asc  column-7.asc
lego_art_map_generator/: count_tiles_from_image.py  natural_earth.py  render_land_grayscale.py  render_land_shadow.py  render_map.py  render_one_bit.py
map_analysis/: compare_tiles_to_sea_depth.py  count_tiles_from_ascii.py  count_tiles_from_image.py  visualize_brightness_tile_proportions.py
map_generator/: brightness_tile_proportions.py  lego_projection_transformer_builder.py  step_1_land_grayscale_utm_map.py  step_1_land_grayscale_world_map.py  step_2_grayscale_to_1bit.py  step_3_land_shadow.py  step_4_sea_grayscale_utm_map.py  step_4_sea_grayscale_world_map.py  step_5_sea.py  step_5_sea_1.py  step_5_sea_2.py  step_6_pixels_to_lego.py  utm_projection_transformer_builder.py
tiles/: world-map-col-0.asc  world-map-col-1.asc  world-map-col-2.asc  world-map-col-3.asc  world-map-col-4.asc  world-map-col-5.asc  world-map-col-6.asc  world-map-col-7.asc
world-map-tiles/: col-0.asc  col-3.asc  col-5.asc
