[tool.poetry]
name = "lego-art-map-generator"
version = "0.1.0"
description = "Scripts for generating custom mosaics for the LEGO Art 'World Map' set."
authors = ["Leif Gehrmann <leif.gehrmann@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
# numpy has a broken dependency management system that claims it doesn't
# support python 3.11
python = "~3.9"
map-engraver = {git = "https://github.com/leifgehrmann/map-engraver.git"}
Shapely = "^1.7.1"
pyshp = "^2.1.3"
pyproj = "^3.2.0"
click = "^8.0.1"
Pillow = "^8.3.2"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
