[tool.poetry]
name = "lego-art-map-generator"
version = "0.1.0"
description = "Scripts for generating custom mosaics for the LEGO Art 'World Map' set."
authors = ["Leif Gehrmann <leif.gehrmann@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
# numpy has a broken dependency management system that claims it doesn't
# support python 3.11
python = "~3.10"
Shapely = "^2.0.1"
pyshp = "^2.1.3"
pyproj = "^3.6.0"
click = "^8.1.7"
Pillow = "^10.0.0"
numpy = "^1.25.2"
geotiff = "^0.2.10"
map-engraver = {git = "https://github.com/leifgehrmann/map-engraver.git"}

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
